# tinyNN

./: .gitignore  CMakeLists.txt
include/neural_network/: header.hpp
include/tinynn/: activation.hpp  multi_layer.hpp  perceptron.hpp
include/tinynn/multi_layer/: layer.hpp  multi_layer_perceptron.hpp  multi_layer_perceptron.tpp  multi_layer_trainer.hpp  multi_layer_trainer.tpp  trainable.hpp
include/tinynn/perceptron/: perceptron_impl.hpp  perceptron_impl.tpp  trainable.hpp  trainer.hpp  trainer.tcc
src/: main.cpp
src/multi_layer_perceptron/: CMakeLists.txt  main.cpp
src/perceptron/: CMakeLists.txt  main.cpp  perceptron  perceptron.cpp  perceptron.hpp  perceptron.tcc  trainable.hpp  trainer.cpp  trainer.hpp  trainer.tcc
